# svg-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/svg_pipeline/: __init__.py  cli.py  config.py  executor.py  pipeline.py
src/svg_pipeline/backends/: __init__.py  base.py  pillow.py
src/svg_pipeline/exporters/: __init__.py  ico.py  manifest.py  png.py
src/svg_pipeline/presets/: __init__.py  full.yaml  mobile.yaml  web.yaml
src/svg_pipeline/templates/: __init__.py
src/svg_pipeline/transforms/: __init__.py  color.py  convert.py  resize.py
tests/: __init__.py  test_pipeline.py
